# doch1

./: .gitignore  AGENTS.md  LEGAL.md  LICENSE  README.md  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: eval.py
src/doch1/: __init__.py  api.py  cli.py  cron.py  dates.py  main.py  observability.py  render.py  session.py  statuses.py
src/doch1/tui/: __init__.py  app.py  app.tcss  data.py  modals.py  screens.py
tests/: conftest.py  test_calendar_merge.py  test_cron.py  test_login_flow.py  test_observability.py  test_render.py  test_report_status.py  test_security_deep_remediation.py  test_security_remediation.py  test_statuses.py  test_tty_gate.py  test_tui.py  test_tui_keyboard_journey.py  test_week_anchor.py  test_week_fill_state.py
tests/eval/: feature_manifest.py  test_features.py
